# hws

./: .setup-config  README  notes.txt  package.cabal
CVS/: Entries  Repository
src/: AccessLogger.hs  Config.hs  ConfigParser.hs  Dir.hs  ErrorLogger.hs  Main.hs  MimeTypes.hs  ParseToken.hs  Parser.hs  Request.hs  Response.hs  TokenDef.hs  Util.hs
src/CVS/: Entries  Repository
