Name: HWS
Version: 1.0
-- License: DontKnow
Author: Simon Marlow
Maintainer: newsham@lava.net
-- Homepage: dontknow
Synopsis: Haskell Web Server
Category: Web server
Build-Depends: base, lang, text, network, haskell98, mtl, unix, data, concurrent

Executable: hws
Main-Is: Main.hs
Hs-Source-Dirs: src
Extensions: CPP
